--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
     /* font-family: 'Bruno Ace', 'Segoe UI'; */
     /* font-family: 'Oswald', sans-serif; */
     /* font-family: 'Ubuntu', sans-serif; */
-    font-family: 'Hammersmith One', sans-serif;
+    font-family: 'Racing Sans One', cursive;
 
     text-decoration: none;
 }
@@ -156,8 +156,8 @@
     width: 100%;
     height: 160%;
     /* border: 1px solid black; */
-    font-family: 'Bruno Ace', cursive;
-    font-size: 21px;
+
+    font-size: 24px;
     font-weight: 900;
     margin-top: 2px;
     /* line-height: 10px; */
@@ -177,7 +177,7 @@
 .logo3 {
     width: 35%;
     height: 50px;
-    font-size: 15px;
+    font-size: 20px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     overflow: hidden;
@@ -205,7 +205,7 @@
     height: 50px;
     background-color: #fcff4b;
     /* color:white; */
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
     line-height: 50px;
     display: flex;
@@ -219,7 +219,7 @@
     height: 50px;
     background-color: white;
     color: black;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
     line-height: 50px;
     display: flex;
@@ -657,7 +657,7 @@
 .main-content-detail {
     /* display:block; */
     /* border: 1px red solid; */
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Racing Sans One', cursive;
     font-size: 20px;
     font-weight: bolder;
     max-width: 99%;
@@ -676,7 +676,7 @@
     position: relative;
     padding: 10px 20px;
     border-radius: 25px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif !important;
+
     /* background-color: rgb(60, 111, 253); */
 }
 
@@ -1346,6 +1346,7 @@
     height: 120px;
     /* border-right: 1px solid black; */
     background-color: white;
+    cursor:pointer;
 
 }
 
